# tree-sitter-carbon

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.devcontainer/: devcontainer.json
.github/workflows/: sync.yml
bindings/c/: tree-sitter-carbon.pc.in
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_carbon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
