[package]
name = "tree-sitter-carbon"
description = "Carbon grammar for tree-sitter"
version = "0.1.0"
authors = ["Carbon Developers"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "carbon"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/aaron-212/tree-sitter-carbon"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
